--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <distributionManagement>
         <repository>
-            <id>brique-release</id>
+            <id>brique-snapshot</id>
             <name>Brique Repositories</name>
             <url>http://www.brique.co.kr:8081/nexus/content/groups/brique/</url>
         </repository>
