--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.chronotics</groupId>
     <artifactId>pithos-ext-es</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.2-SNAPSHOT</version>
 
     <repositories>
         <repository>
@@ -20,9 +20,27 @@
         <repository>
             <id>brique-snapshot</id>
             <name>Brique Repositories</name>
-            <url>http://www.brique.co.kr:8081/nexus/content/groups/brique/</url>
+            <url>http://www.brique.co.kr:8081/nexus/content/repositories/brique-snapshot/</url>
         </repository>
     </distributionManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+                <executions>
+                    <execution>
+                        <id>default-deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
