--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
         <dependency>
             <groupId>org.elasticsearch.plugin</groupId>
             <artifactId>aggs-matrix-stats-client</artifactId>
-            <version>6.4.0</version>
+            <version>${elasticsearch.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
