Update createIndex and insertBulkData to handle NULLity and NA data: - Field that contains NA, N/A, NAN will be considered as keyword - Document that contains empty data field will be ignored this field when insert data to index

--- a/pom.xml
+++ b/pom.xml
@@ -99,5 +99,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-csv</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
