--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.chronotics</groupId>
     <artifactId>pithos-ext-es</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.3-SNAPSHOT</version>
 
     <repositories>
         <repository>
@@ -65,13 +65,14 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <elasticsearch.version>6.4.2</elasticsearch.version>
         <jackson.version>2.9.6</jackson.version>
+        <chron.version>1.3-SNAPSHOT</chron.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.chronotics</groupId>
             <artifactId>pandora</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${chron.version}</version>
         </dependency>
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
