--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,16 @@
             <name>Brique Repositories</name>
             <url>http://www.brique.co.kr:8081/nexus/content/groups/brique/</url>
         </repository>
+        <repository>
+            <id>elasticsearch-releases</id>
+            <url>https://artifacts.elastic.co/maven</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <distributionManagement>
@@ -87,6 +97,11 @@
         <dependency>
             <groupId>org.elasticsearch.plugin</groupId>
             <artifactId>aggs-matrix-stats-client</artifactId>
+            <version>${elasticsearch.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>x-pack-transport</artifactId>
             <version>${elasticsearch.version}</version>
         </dependency>
     </dependencies>
